--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,7 +60,12 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/images/volunteer/
+    - assets/images/common/
+    - assets/images/signup/
+    - assets/images/home/
+    - assets/images/bottom_navigation_bar/
+    - assets/images/volunteer_type/
+    - assets/mock/volunteer/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
