--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   provider: ^6.0.0
+  share: ^2.0.4
 
 dev_dependencies:
   flutter_test:
@@ -63,8 +64,10 @@ flutter:
     - assets/images/common/
     - assets/images/signup/
     - assets/images/home/
+    - assets/images/detail/
     - assets/images/bottom_navigation_bar/
     - assets/images/volunteer_prefers/
+    - assets/images/category/
     - assets/mock/town/
 
   # An image asset can refer to one or more resolution-specific "variants", see
